--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "phoenix": "parcel src/index.html",
-    "build":"parcel build src/index.html"
+    "build":"parcel build src/index.js"
   },
   "author": "Guma",
   "license": "ISC",
